--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-body,
-html {
+body{
+  margin: auto 0;
   width: 100%;
   height: 100%;
   font-family: 'Raleway', sans-serif;
@@ -9,11 +9,9 @@ html {
   -o-background-size: cover;
   background-size: cover;
 }
-body{
 
-}
 .buffer-top{
-  height: 7rem;
+  height: 6rem;
 }
 h1 {
     margin: 20px auto;
@@ -28,13 +26,34 @@ h1:hover{
     transform: scale(1.2);
 }
 .buffer{
-  height: 6rem;
+  height: 4rem;
+}
+.welcome{
+  font-size: 3em;
 }
 .words{
   font-size:3em;
   color:#FFFFFF;
 }
-
+nav{
+  background: #096C67;
+}
+.main-nav{
+  list-style: none;
+  display:flex;
+  font-size:1em;
+  margin:0;
+}
+li{
+  padding:20px;
+}
+.push{
+  margin-left: auto;
+}
+a{
+  color:#f5f5f6;
+  text-decoration: none;
+}
 .btn-primary{
   border-radius:300px;
   background-color:#23A09A;
