--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-  margin: auto 0;
+  margin:auto 0;
   width: 100%;
   height: 100%;
   font-family: 'Raleway', sans-serif;
@@ -9,7 +9,10 @@ body{
   -o-background-size: cover;
   background-size: cover;
 }
-
+.all{
+  display:grid;
+  grid-template-columns: 1fr;
+}
 .buffer-top{
   height: 6rem;
 }
