--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body{
   background-size: cover;
 }
 .all{
+  margin-right: 0;
   display:grid;
   grid-template-columns: 1fr;
 }
@@ -47,7 +48,7 @@ nav{
   font-size:1em;
   margin:0;
 }
-@media only screen and (max-width:500px){
+@media only screen and (max-width:600px){
   .main-nav{
     font-size: 0.6em;
     padding:0;
