--- a/style.css
+++ b/style.css
@@ -48,6 +48,9 @@ nav{
   font-size:1em;
   margin:0;
 }
+.main-nav:hover{
+  color:#BFE0E0;
+}
 @media only screen and (max-width:600px){
   .main-nav{
     font-size: 0.6em;
